# endgame

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: copilot-instructions.md
assets/: endgame.rc  tray-32.rgba
src/: config.rs  config.yaml  hotkey.rs  log.rs  main.rs  process.rs  tray.rs
