[package]
name = "endgame"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1.0.226", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
tray-icon = "0.21.1"
windows = { version = "0.62.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
windows-sys = { version = "0.61.0", features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_Threading",
	"Win32_Security",
	"Win32_System_SystemServices"
] }
winit = "0.30.12"
log = "0.4"
simplelog = "0.12"
