[package]
name = "endgame"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
build = "build.rs"

[build-dependencies]
embed-resource = "3.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
tray-icon = "0.24"
windows = { version = "0.62", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
windows-sys = { version = "0.61", features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_Threading",
	"Win32_Security",
	"Win32_System_SystemServices"
] }
winit = "0.30"
log = "0.4"
simplelog = "0.12"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
